[package]
name = "rust_tonic"
version = "0.1.0"
authors = ["LesnyRumcajs <lesny.rumcajs+github@gmail.com>"]
edition = "2021"

[profile.release]
opt-level = 3
codegen-units = 1
lto = true

[dependencies]
jemallocator = "0.5.0"
tonic = "0.9"
prost = "0.11"
tokio = { version = "1.28", features = ["parking_lot", "rt-multi-thread", "macros", "io-util"] }
cxx = "1.0.78"
autocxx = "0.25.0"


[build-dependencies]
tonic-build = "0.9"
autocxx-build = "0.25.0"
miette = { version = "5", features = ["fancy"] }

[[bin]]
name = "helloworld-server"
path = "src/main.rs"
